--- a/version/8.x/index.html
+++ b/version/8.x/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Ng Alain - 一个基于 Antd 中后台前端解决方案</title>
-  <base href="/version/8.x/">
+  <base href="/ng-alain-docs/version/8.x/">
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="manifest" href="./assets/pwa-manifest.json">
